<resources>
    <string name="app_name">Chips</string>
    <string name="material_chips">Material Chips</string>
    <string name="fragment_entry_chip">Entry Chip</string>
    <string name="fragment_filter_chip">Filter Chip</string>
    <string name="fragment_choice_chip">Choice Chip</string>
    <string name="fragment_action_chip">Action Chip</string>
    <string name="entry">Entry</string>
    <string name="filter">Filter</string>
    <string name="choice">Choice</string>
    <string name="action">Action</string>
    <string name="outlined">Outlined</string>
    <string name="material">Material</string>
    <string name="filled">Filled</string>
    <string name="outlined_sharp">Sharp Edges</string>
    <string name="filled_sharp">Filled Sharp</string>
    <string name="filled_rounded">Rounded</string>
    <string name="Eight">8</string>
    <string name="outlined_rounded">Rounded</string>
    <string name="entry_chip_group">Entry ChipGroup</string>
    <string name="choice_chip_group">Choice ChipGroup</string>
    <string name="filter_chip_group">Filter ChipGroup</string>
    <string name="action_chip_group">Action ChipGroup</string>
    <string name="custom_chip">Custom Chip</string>

    <string name="select_shirt">Select Shirt</string>
    <string name="clear_selected">Clear</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="filter_selection">Filter</string>
    <string name="color">Color</string>
</resources>
